--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0; 
     padding: 0; 
-    font-family:'Courier New', Courier, monospace; 
+    font-family:'roboto', arial, helvetica, sans-serif; 
     box-sizing: border-box;
 }
 
@@ -10,4 +10,25 @@
     min-height: 100vh;
     background: linear-gradient(135deg, #153677, #4e085f);
     padding: 10px;
+}
+
+.todo-app {
+    width: 100%;
+    max-width: 540px;
+    background: #fff;
+    margin: 100px auto 20px;
+    padding: 40px 30px 70px;
+    border-radius: 10px;
+}
+
+.todo-app h2 {
+    color: #002765;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.todo-app h2 img {
+    width: 30px;
+    margin-left: 10px;
 }
